--- a/views/partials/dashboardhead.hbs
+++ b/views/partials/dashboardhead.hbs
@@ -1,7 +1,8 @@
 <div class="row sticky-top m-0 p-lr-15 bg-light">
     <div class="col-lg-12   my-2">
-      <h1 class="color-mydashboard  font-weight-6 main-head">MyDashboard</h1>
-
+      
+      <a href="/adminpanel"><h1 class="color-mydashboard  font-weight-6 main-head">MyDashboard</h1></a>
+     
       <div class="dropdown admin border-left border-right">
         <a class=" " href="#" role="button" id="profile" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">
